fix: fixed the navigation bar overlaping with web elements

--- a/css/colors.css
+++ b/css/colors.css
@@ -48,5 +48,5 @@
   --md-sys-color-surface-container: rgb(28 33 27);
   --md-sys-color-surface-container-high: rgb(39 43 37);
   --md-sys-color-surface-container-highest: rgb(50 54 48);
-  --transparent-green: rgba(255, 253, 253, 0.1);
+  --transparent-green: rgba(18, 56, 32, 0.418);
 }
